--- a/package.json
+++ b/package.json
@@ -4,20 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "npx tsx index.ts"
+    "serve": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30",
-    "tsx": "^4.19.1",
-    "typescript": "^5.4.3"
-  },
-  "type": "module"
+  }
 }
