--- a/yt/package.json
+++ b/yt/package.json
@@ -4,20 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx tsx index.ts"
+    "dev": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "csvtojson": "^2.0.10",
+    "dotenv": "^16.4.5",
     "ruhend-scraper": "^8.0.3",
     "stopwords": "^0.0.9",
+    "yt-search": "^2.12.1",
     "ytscr": "^1.0.5",
     "ytsr": "^3.8.4"
-  },
-  "devDependencies": {
-    "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
-  },
-  "type": "modules"
+  }
 }
