--- a/yt/package.json
+++ b/yt/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "csvtojson": "^2.0.10",
     "dotenv": "^16.4.5",
+    "nedb-promises": "^6.2.3",
     "ruhend-scraper": "^8.0.3",
     "stopwords": "^0.0.9",
     "yt-search": "^2.12.1",
