--- a/deno.json
+++ b/deno.json
@@ -2,5 +2,6 @@
   "tasks": {
     "start": "deno run --allow-net --allow-env --allow-read --allow-write --unstable-kv main.ts",
     "yt": "deno run --allow-net --allow-env --allow-read --allow-write --unstable-kv yt/main.ts"
-  }
+  },
+  "nodeModulesDir": "auto"
 }
