--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "yt-search": "^2.12.1"
+    "yt-search": "^2.12.1",
+    "ytsr": "^3.8.4"
   }
 }
